Fix header image on mobile

--- a/_includes/theme.css
+++ b/_includes/theme.css
@@ -164,6 +164,7 @@ header {
     min-width: 360px;
     max-width: 360px;
     flex-grow: 1;
+    display: block;
 
     @supports ((animation-timeline: view()) and (animation-range: 0% 100%)) {
       animation: greyOut;
@@ -174,7 +175,7 @@ header {
     @media (max-width: 820px) {
       max-height: unset;
       min-width: unset;
-      max-width: unset;
+      max-width: 100vw;
       aspect-ratio: 1/1;
     }
   }
@@ -189,6 +190,7 @@ header {
 
     a {
       box-shadow: none;
+      display: block;
     }
   }
 
